--- a/style.css
+++ b/style.css
@@ -167,3 +167,12 @@ img.hero-right {
     font-weight: bold;
     margin-top: 20px;
 }
+
+footer.copyright-section {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0px 30px 0px;
+}
